hero container CSS/JS + WIP container with video playing on scroll

--- a/index.html
+++ b/index.html
@@ -15,8 +15,24 @@
         <div class="hero-mask-content"></div>
       </div> -->
       <div class="hero-title">
-        <div class="hero-title-mask"></div>
-        <div class="hero-title-bg"></div>
+        <div class="hero-title-inner">
+          <div class="hero-title-mask"></div>
+          <div class="hero-title-bg"></div>
+          <p class="hero-title-text">New season<br />on 26th May<br />2026</p>
+          <div class="hero-title-bgFadeOut"></div>
+        </div>
+      </div>
+    </section>
+    <section class="calendar">
+      <!-- <img src="./src/assets/img/martin1.png" alt=""> -->
+      <div class="calendar-background">
+        <video
+          src="./src/assets/video/lusail-encoded.mp4"
+          muted
+          playsinline
+          preload="auto"
+          class="calendar-background-video"
+        ></video>
       </div>
     </section>
     <script type="module" src="/src/main.ts"></script>
