--- a/index.html
+++ b/index.html
@@ -19,20 +19,41 @@
           <div class="hero-title-mask"></div>
           <div class="hero-title-bg"></div>
           <p class="hero-title-text">New season<br />on 26th May<br />2026</p>
-          <div class="hero-title-bgFadeOut"></div>
         </div>
+        <div class="hero-title-bgFadeOut"></div>
       </div>
     </section>
-    <section class="calendar">
+    <section class="intro">
       <!-- <img src="./src/assets/img/martin1.png" alt=""> -->
-      <div class="calendar-background">
+      <div class="intro-background">
         <video
           src="./src/assets/video/lusail-encoded.mp4"
           muted
           playsinline
           preload="auto"
-          class="calendar-background-video"
+          class="intro-background-video"
         ></video>
+        <div class="intro-background-blur"></div>
+        <div class="intro-background-fadeLeft"></div>
+      </div>  
+      <div class="intro-content">
+        <div class="intro-content-left">
+          <h1>The 2025 MotoGP season is here</h1>
+          <p class="intro-content-left-subtitle">
+            Engines are roaring, legends are returning, and a new generation of
+            hungry riders is ready to fight for glory.
+          </p>
+          <p class="intro-content-left-text">
+            Speed, strategy, and impossible overtakes — get ready for a year of
+            pure adrenaline on the world’s most iconic tracks. The championship
+            is tighter than ever… <br />Who will conquer the asphalt in 2025 ?
+          </p>
+          <img src="./src/assets/img/3.jpg" alt="">
+        </div>
+        <div class="intro-content-right">
+          <img src="./src/assets/img/1.jpg" alt="">
+          <img src="./src/assets/img/2.jpg" alt="">
+        </div>
       </div>
     </section>
     <script type="module" src="/src/main.ts"></script>
