--- a/index.html
+++ b/index.html
@@ -56,6 +56,11 @@
         </div>
       </div>
     </section>
+    <section class="quote">
+      <div class="quote-banner">
+        <div class="quote-banner-img"></div>
+      </div>
+    </section>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
