--- a/index.html
+++ b/index.html
@@ -59,8 +59,13 @@
     <section class="quote">
       <div class="quote-banner">
         <div class="quote-banner-img"></div>
+        <p class="quote-banner-text">« Quand j’étais enfant, j’ai toujours rêvé d’être champion de MotoGP. »</p>
       </div>
+      <!-- <div class="quote-content">
+        <p class="quote-content-text">« Quand j’étais enfant, j’ai toujours rêvé d’être champion de MotoGP. »</p>
+      </div> -->
     </section>
+    <section class="drivers"></section>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
