WIP drivers container

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         ></video>
         <div class="intro-background-blur"></div>
         <div class="intro-background-fadeLeft"></div>
-      </div>  
+      </div>
       <div class="intro-content">
         <div class="intro-content-left">
           <h1>The 2025 MotoGP season is here</h1>
@@ -48,24 +48,70 @@
             pure adrenaline on the world’s most iconic tracks. The championship
             is tighter than ever… <br />Who will conquer the asphalt in 2025 ?
           </p>
-          <img src="./src/assets/img/3.jpg" alt="">
+          <img src="./src/assets/img/3.jpg" alt="" />
         </div>
         <div class="intro-content-right">
-          <img src="./src/assets/img/1.jpg" alt="">
-          <img src="./src/assets/img/2.jpg" alt="">
+          <img src="./src/assets/img/1.jpg" alt="" />
+          <img src="./src/assets/img/2.jpg" alt="" />
         </div>
       </div>
     </section>
     <section class="quote">
       <div class="quote-banner">
         <div class="quote-banner-img"></div>
-        <p class="quote-banner-text">« Quand j’étais enfant, j’ai toujours rêvé d’être champion de MotoGP. »</p>
+        <p class="quote-banner-text">
+          « Quand j’étais enfant, j’ai toujours rêvé d’être champion de MotoGP.
+          »
+        </p>
       </div>
       <!-- <div class="quote-content">
         <p class="quote-content-text">« Quand j’étais enfant, j’ai toujours rêvé d’être champion de MotoGP. »</p>
       </div> -->
     </section>
-    <section class="drivers"></section>
+    <section class="drivers">
+      <div class="drivers-list">
+        <div class="drivers-list-blur"></div>
+        <h2>Your MotoGP™ drivers</h2>
+        <div class="drivers-list-row">
+          <img src="./src/assets/img/drivers/m-marquez.webp" alt="" />
+          <img src="./src/assets/img/drivers/a-marquez.webp" alt="" />
+          <img src="./src/assets/img/drivers/f-bagnaia.webp" alt="" />
+        </div>
+        <div class="drivers-list-row">
+          <img src="./src/assets/img/drivers/m-bezzechi.webp" alt="" />
+          <img src="./src/assets/img/drivers/f-di-giannantonio.webp" alt="" />
+          <img src="./src/assets/img/drivers/f-morbidelli.webp" alt="" />
+        </div>
+        <div class="drivers-list-row">
+          <img src="./src/assets/img/drivers/p-acosta.webp" alt="" />
+          <img src="./src/assets/img/drivers/j-zarco.webp" alt="" />
+          <img src="./src/assets/img/drivers/f-quartararo.webp" alt="" />
+        </div>
+        <div class="drivers-list-row">
+          <img src="./src/assets/img/drivers/f-aldeguer.webp" alt="" />
+          <img src="./src/assets/img/drivers/m-vinales.webp" alt="" />
+          <img src="./src/assets/img/drivers/b-binder.webp" alt="" />
+        </div>
+        <div class="drivers-list-row">
+          <img src="./src/assets/img/drivers/r-fernandez.webp" alt="" />
+          <img src="./src/assets/img/drivers/j-miller.webp" alt="" />
+          <img src="./src/assets/img/drivers/l-marini.webp" alt="" />
+        </div>
+        <div class="drivers-list-row">
+          <img src="./src/assets/img/drivers/a-ogura.webp" alt="" />
+          <img src="./src/assets/img/drivers/e-bastianini.webp" alt="" />
+          <img src="./src/assets/img/drivers/a-rins.webp" alt="" />
+        </div>
+        <div class="drivers-list-row">
+          <img src="./src/assets/img/drivers/j-mir.webp" alt="" />
+          <img src="./src/assets/img/drivers/j-martin.webp" alt="" />
+          <img src="./src/assets/img/drivers/m-oliveira.webp" alt="" />
+        </div>
+        <div class="drivers-list-row">
+          <img src="./src/assets/img/drivers/s-chantra.webp" alt="" />
+        </div>
+      </div>
+    </section>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
