--- a/index.html
+++ b/index.html
@@ -178,6 +178,39 @@
         </div>
       </div>
     </section>
+    <section class="outro">
+      <!-- <img src="./src/assets/img/martin1.png" alt=""> -->
+      <div class="outro-background">
+        <video
+          src="./src/assets/video/aragon.mp4"
+          muted
+          playsinline
+          preload="auto"
+          class="outro-background-video"
+        ></video>
+        <div class="outro-background-blur"></div>
+        <div class="outro-background-fadeLeft"></div>
+      </div>
+      <div class="outro-content">
+        <div class="outro-content-left">
+          <h1>The 2025 MotoGP season is here</h1>
+          <p class="outro-content-left-subtitle">
+            Engines are roaring, legends are returning, and a new generation of
+            hungry riders is ready to fight for glory.
+          </p>
+          <p class="outro-content-left-text">
+            Speed, strategy, and impossible overtakes — get ready for a year of
+            pure adrenaline on the world’s most iconic tracks. The championship
+            is tighter than ever… <br />Who will conquer the asphalt in 2025 ?
+          </p>
+          <img src="./src/assets/img/3.jpg" alt="" />
+        </div>
+        <div class="outro-content-right">
+          <img src="./src/assets/img/1.jpg" alt="" />
+          <img src="./src/assets/img/2.jpg" alt="" />
+        </div>
+      </div>
+    </section>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
