--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header class="header">
-      <img src="./src/assets/img/logo-short.svg" alt="" class="header-logo">
+      <img src="./src/assets/img/logo-short.svg" alt="" class="header-logo" />
       <span>=</span>
     </header>
     <section class="hero">
@@ -66,6 +66,133 @@
       </div>
     </section>
     <section class="drivers">
+      <div class="drivers-inner">
+        <h2>Your MotoGP™ drivers</h2>
+        <div class="drivers-list">
+          <div class="drivers-list-row">
+            <div class="drivers-list-row-item ducati">
+              <img src="./src/assets/img/drivers/m-marquez.webp" alt="" />
+              <span>Marc<br />Marquez </span>
+            </div>
+            <div class="drivers-list-row-item aprilia">
+              <img src="./src/assets/img/drivers/m-bezzechi.webp" alt="" />
+              <span>Marco<br />Bezzechi</span>
+            </div>
+            <div class="drivers-list-row-item ktm">
+              <img src="./src/assets/img/drivers/p-acosta.webp" alt="" />
+              <span>Pedro<br />Acosta</span>
+            </div>
+            <div class="drivers-list-row-item gresini">
+              <img src="./src/assets/img/drivers/f-aldeguer.webp" alt="" />
+              <span>Fermin<br />Aldeguer</span>
+            </div>
+            <div class="drivers-list-row-item trackhouse">
+              <img src="./src/assets/img/drivers/r-fernandez.webp" alt="" />
+              <span>Raul<br />Fernandez</span>
+            </div>
+            <div class="drivers-list-row-item trackhouse">
+              <img src="./src/assets/img/drivers/a-ogura.webp" alt="" />
+              <span>Ai<br />Ogura</span>
+            </div>
+            <div class="drivers-list-row-item honda">
+              <img src="./src/assets/img/drivers/j-mir.webp" alt="" />
+              <span>Joan<br />Mir</span>
+            </div>
+            <div class="drivers-list-row-item aprilia">
+              <img src="./src/assets/img/drivers/j-martin.webp" alt="" />
+              <span>Jorge<br />Martin</span>
+            </div>
+          </div>
+          <div class="drivers-list-row">
+            <div class="drivers-list-row-item gresini">
+              <img src="./src/assets/img/drivers/a-marquez.webp" alt="" />
+              <span>Alex<br />Marquez </span>
+            </div>
+            <div class="drivers-list-row-item vr46">
+              <img
+                src="./src/assets/img/drivers/f-di-giannantonio.webp"
+                alt=""
+              />
+              <span>Fabio<br />Di Giannantonio </span>
+            </div>
+            <div class="drivers-list-row-item lcr-castrol">
+              <img src="./src/assets/img/drivers/j-zarco.webp" alt="" />
+              <span>Johann<br />Zarco</span>
+            </div>
+            <div class="drivers-list-row-item tech3">
+              <img src="./src/assets/img/drivers/m-vinales.webp" alt="" />
+              <span>Maverick<br />Viñales</span>
+            </div>
+            <div class="drivers-list-row-item pramac">
+              <img src="./src/assets/img/drivers/j-miller.webp" alt="" />
+              <span>Jack<br />Miller</span>
+            </div>
+            <div class="drivers-list-row-item tech3">
+              <img src="./src/assets/img/drivers/e-bastianini.webp" alt="" />
+              <span>Enea<br />Bastianini</span>
+            </div>
+            <div class="drivers-list-row-item pramac">
+              <img src="./src/assets/img/drivers/m-oliveira.webp" alt="" />
+              <span>Miguel<br />Oliveira</span>
+            </div>
+          </div>
+          <div class="drivers-list-row">
+            <div class="drivers-list-row-item ducati">
+              <img src="./src/assets/img/drivers/f-bagnaia.webp" alt="" />
+              <span>Fancesco<br />Bagnaia </span>
+            </div>
+            <div class="drivers-list-row-item vr46">
+              <img src="./src/assets/img/drivers/f-morbidelli.webp" alt="" />
+              <span>Franco<br />Morbidelli</span>
+            </div>
+            <div class="drivers-list-row-item yamaha">
+              <img src="./src/assets/img/drivers/f-quartararo.webp" alt="" />
+              <span>Fabio<br />Quartararo</span>
+            </div>
+            <div class="drivers-list-row-item ktm">
+              <img src="./src/assets/img/drivers/b-binder.webp" alt="" />
+              <span>Brad<br />Binder</span>
+            </div>
+            <div class="drivers-list-row-item honda">
+              <img src="./src/assets/img/drivers/l-marini.webp" alt="" />
+              <span>Luca<br />Marini</span>
+            </div>
+            <div class="drivers-list-row-item yamaha">
+              <img src="./src/assets/img/drivers/a-rins.webp" alt="" />
+              <span>Alex<br />Rins</span>
+            </div>
+            <div class="drivers-list-row-item lcr-idemitsu">
+              <img src="./src/assets/img/drivers/s-chantra.webp" alt="" />
+              <span>Somkiat<br />Chantra</span>
+            </div>
+          </div>
+        </div>
+        <!-- <div class="drivers-list">
+          <div class="drivers-list-blur"></div>
+          <div class="drivers-list-row">
+            <div class="drivers-list-row-item honda">
+              <img src="./src/assets/img/drivers/j-mir.webp" alt="" />
+              <span>Joan<br />Mir</span>
+            </div>
+            <div class="drivers-list-row-item pramac">
+              <img src="./src/assets/img/drivers/m-oliveira.webp" alt="" />
+              <span>Miguel<br />Oliveira</span>
+            </div>
+            <div class="drivers-list-row-item lcr-idemitsu">
+              <img src="./src/assets/img/drivers/s-chantra.webp" alt="" />
+              <span>Somkiat<br />Chantra</span>
+            </div>
+          </div>
+          <div class="drivers-list-row">
+            <div class="drivers-list-row-item aprilia">
+              <img src="./src/assets/img/drivers/j-martin.webp" alt="" />
+              <span>Jorge<br />Martin</span>
+            </div>
+          </div>
+        </div> -->
+      </div>
+    </section>
+    <!-- <section class="drivers">
       <div class="drivers-list">
         <div class="drivers-list-blur"></div>
         <h2>Your MotoGP™ drivers</h2>
@@ -174,8 +301,8 @@
           </div>
         </div>
       </div>
-    </section>
-    
+    </section> -->
+
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
